# mynx

./: .gitattributes  .gitignore  .prettierignore  BUILD.md  LICENSE  PROJECT.md  README.md  RELEASE.md  RELEASE_GUIDE.md  eslint.config.js  gen-ico.cjs  index.html  main.js  package-lock.json  package.json  renderer.js  runs.tmp  styles.css  sync-version.cjs  vite.config.ts
.github/workflows/: release.yml
.workbuddy/memory/: 2026-06-26.md
docs/plans/: 2026-06-24-cleanup.md
installer/: index.html  package-lock.json  package.json  vite.config.ts
installer/src/: App.tsx  main.tsx
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: elevate.rs  install.rs  lib.rs  main.rs
ref/: 20260616RNA.xlsx
scripts/: build-portable.cjs  build-singlefile.cjs  clean-installer-artifacts.cjs  find-macos-artifacts.py  gen-ico.cjs  gen-installer-images.cjs  post-installer-build.cjs  release.cjs  sync-installer-payload.cjs  sync-version.cjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: installer-overlay.nsh  installer.nsi
src-tauri/scripts/: fix-damaged.command
src-tauri/src/: lib.rs  main.rs
src/components/: AboutModal.tsx  AppMark.tsx  HelpButton.tsx  Home.tsx  LoadingOverlay.tsx  Modal.tsx  Sidebar.tsx  ThemePicker.tsx  TitleBar.tsx  Toast.tsx  UpdateNotification.tsx  WeatherWidget.tsx
src/hooks/: useDropZone.ts  useTheme.ts
src/lib/: chart-gen.ts  chart-xml.ts  config.ts  excel-io.ts  (+7 more)
(+21 files in other folders)
